[project]
name = "rogue-like"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tcod>=19.1.0",
    "tcod-ecs>=5.4.1",
]
[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]
